@@ -1,17 +1,16 @@
 #!/bin/bash
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/netboot-image.sh,v 1.2 2004/10/06 16:00:09 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/netboot-image.sh,v 1.3 2004/10/11 14:19:30 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
 
 [ -f /tmp/envscript ] && source /tmp/envscript
 
-IMAGE_PATH=$1
-shift
-TARBALL=$1
-shift
+export USE="-* netboot"
+
+emerge -k -b --nodeps genext2fs || exit 1
 
 if [ -z "${IMAGE_PATH}" ]
 then
@@ -19,112 +18,92 @@ then
 	exit 1
 fi
 
-# Required directories
-mkdir -vp ${IMAGE_PATH}/bin
-mkdir -vp ${IMAGE_PATH}/dev
-mkdir -vp ${IMAGE_PATH}/etc
-mkdir -vp ${IMAGE_PATH}/mnt/gentoo
-mkdir -vp ${IMAGE_PATH}/proc
-mkdir -vp ${IMAGE_PATH}/var/log
+# Install the netboot base system
+ROOT=${IMAGE_PATH} emerge -k -b --nodeps netboot-base || exit 1
+
+# Handle all strip calls here
+function do_strip() {
+	strip --strip-unneeded "$@"
+}
 
 # Copy libs of a executable in the chroot
 function copy_libs() {
+	local ldd file="${1}"
+	# Figure out what libraries this file needs
+	local libs="$(readelf -d "${file}" | grep '(NEEDED)' | awk '{print $NF}')"
 
-	# Check if it's a dynamix exec
-	ldd ${1} > /dev/null 2>&1 || return
+	# Check if it's a dynamix exec, bail if it isnt
+	[ -z "${libs}" ] && return 0
     
-	for lib in `ldd ${1} | awk '{ print $3 }'`
+	for lib in ${libs}
 	do
-		if [ -e ${lib} ]
-		then
-			if [ ! -e ${IMAGE_PATH}/${lib} ]
-			then
-				copy_file ${lib}
-				[ -e "${IMAGE_PATH}/${lib}" ] && strip -R .comment -R .note ${IMAGE_PATH}/${lib} || echo "WARNING : Cannot strip lib ${IMAGE_PATH}/${lib} !"
-			fi
-		else
-			echo "WARNING : Some library was not found for ${lib} !"
-		fi
-	done
+		# readelf shows [libblah.so] so we have to trim []
+		lib=${lib:1:${#lib}-2}
 
-}
+		# don't scan the lib if it's already been copied over
+		[ -e "${IMAGE_PATH}/lib/${lib}" ] && continue
 
-function copy_symlink() {
-
-	STACK=${2}
-	[ "${STACK}" = "" ] && STACK=16 || STACK=$((${STACK} - 1 ))
-
-	if [ ${STACK} -le 0 ] 
-	then
-		echo "WARNING : ${TARGET} : too many levels of symbolic links !"
-		return
-	fi
-
-	[ ! -e ${IMAGE_PATH}/`dirname ${1}` ] && mkdir -p ${IMAGE_PATH}/`dirname ${1}`
-	[ ! -e ${IMAGE_PATH}/${1} ] && cp -vfdp ${1} ${IMAGE_PATH}/${1}
+		# ldd changes output format over time
+		ldd="$(ldd "${file}" | grep ${lib})"
+		set -- ${ldd}
+		for ldd in "${@}" NF
+		do
+			[ "${ldd:0:1}" == "/" ] && break
+		done
 	
-	TARGET=`readlink -f ${1}`
-	if [ -h ${TARGET} ]
+		if [ "${ldd}" == "NF" ]
 	then
-		copy_symlink ${TARGET} ${STACK}
+			echo "copy_lib: could not locate '${lib}'"
 	else
-		copy_file ${TARGET}
+			copy_file ${ldd}
 	fi
-
+	done
 }
-
 function copy_file() {
-
-	f="${1}"
+	local f="${1}"
 
 	if [ ! -e "${f}" ]
 	then
-		echo "WARNING : File not found : ${f}"
-		continue
+		echo "copy_file: File '${f}' not found"
+		return 0
 	fi
 
-	[ ! -e ${IMAGE_PATH}/`dirname ${f}` ] && mkdir -p ${IMAGE_PATH}/`dirname ${f}`
-	[ ! -e ${IMAGE_PATH}/${f} ] && cp -vfdp ${f} ${IMAGE_PATH}/${f}
-	if [ -x ${f} -a ! -h ${f} ]
+	if [ -L "${f}" ]
 	then
-		copy_libs ${f}
-		strip -R .comment -R .note ${IMAGE_PATH}/${f} > /dev/null 2>&1
-	elif [ -h ${f} ]
+		cp -dp "${f}" "${IMAGE_PATH}/lib/"
+		local l="$(readlink "${f}")"
+		if [ ! -e "${l}" ]
 	then
-		copy_symlink ${f}
+			l="$(dirname "${f}")/${l}"
+		fi
+		f="${l}"
 	fi
+	cp "${f}" "${IMAGE_PATH}/lib/"
+	do_strip "${IMAGE_PATH}/lib/$(basename "${f}")"
 }
 
 # Copy the files needed in the chroot
+loader="$(readelf -a ${IMAGE_PATH}/bin/busybox | grep 'ld-.*so' | awk '{print $NF}')"
+copy_file ${loader/]}
 copy_libs ${IMAGE_PATH}/bin/busybox
-
-FILES="${@}"
-for f in ${FILES}
-do
+for f in "$@" ; do
+	copy_libs ${f}
 	copy_file ${f}
 done
 
-# Copy the kernel modules
-[ ! -e ${IMAGE_PATH}/lib ]  && mkdir -p ${IMAGE_PATH}/lib
-cp -Rv /lib/modules ${IMAGE_PATH}/lib
-#find ${IMAGE_PATH}/lib -name \*.o -o -name \*.ko | xargs strip -R .comment -R .note
+# Copy the kernel modules over
+if [ -d ${GK_BINARIES}/lib ] ; then
+	cp -r ${GK_BINARIES}/lib ${IMAGE_PATH}/ || exit 1
+fi
 
-# Extract the base tarball
-tar xjvf ${TARBALL} -C ${IMAGE_PATH}/
-
-# Unpack the kernel
-tar xjvf ${GK_BINARIES}/kernel.tar.bz2 -C /
-mv -f /kernel-2.* /kernel
+# Prune portage stuff
+cd ${IMAGE_PATH}
+rm -r var/db var/cache
 
 # Create the ramdisk
-IMAGE_SIZE=`du -s ${IMAGE_PATH} | awk '{ print $1 }'`
-
-dd if=/dev/zero of=/ramdisk bs=1k count=$((IMAGE_SIZE + 500))
-
-yes | mke2fs /ramdisk
-
-mkdir /ramdisk-loop
-mount -o loop ramdisk ramdisk-loop
-cp -R ${IMAGE_PATH}/* /ramdisk-loop
-umount /ramdisk-loop
-rmdir /ramdisk-loop
+IMAGE_SIZE=$(du -s -k ${IMAGE_PATH} | cut -f1)
+IMAGE_SIZE=$((IMAGE_SIZE + 200))
+IMAGE_INODES=$(find ${IMAGE_PATH} | wc -l)
+IMAGE_INODES=$((IMAGE_INODES + 100))
+genext2fs -q -d "${IMAGE_PATH}" -b ${IMAGE_SIZE} -i ${IMAGE_INODES} /initrd || exit 1
+gzip -9f /initrd || exit 1
